Tue Dec 18 20:22:44 2007  Tanaka Akira  <akr@fsij.org>

	* parse.y (arg tMATCH arg): call reg_named_capture_assign_gen if regexp
	  literal is used.
	  (reg_named_capture_assign_gen): assign the result of named capture
	  into local variables.
	  [ruby-dev:32588]

	* re.c: document the assignment by named captures.

Tue Dec 18 18:09:15 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_splice): propagate encoding.

	* string.c (rb_str_subpat_set): ditto.

Tue Dec 18 17:27:12 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_obj_freeze): preserve frozen state of immediate
	  values in internal hash table, a la generic_ivar.

	* object.c (rb_obj_frozen_p): check immediate values too.

	* variable.c (generic_ivar_set): add frozen check fro immediate
	  values. 

Tue Dec 18 17:04:25 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (rb_str_transcode_bang, rb_str_transcode): set new
	  encoding even if no conversion is done because of 7bit only.
	  [ruby-dev:32591]

Tue Dec 18 15:43:59 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (encs, ext/ripper/ripper.c): other options must come
	  before MAKEFLAGS in GNU make.

Tue Dec 18 15:19:55 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parsers/parse_rb.rb: Don't call private fail anymore.

Tue Dec 18 15:17:26 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (encs, ext/ripper/ripper.c): pass MAKEFLAGS.

Tue Dec 18 14:45:25 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (op_tbl): remove duplication to avoid symbol aliases.

Tue Dec 18 14:39:05 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_nth): need not to raise out-of-range exception.

	* test/ruby/test_m17n.rb (TestM17N::test_str_aref_len): removed
	  debug print.

Tue Dec 18 14:05:23 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend: get rid of target expanded as empty for nmake.

Tue Dec 18 07:56:57 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
