@@ -1,3 +1,7 @@
+Tue Dec 18 18:10:05 2007  Koichi Sasada  <ko1@atdot.net>
+
+	* bootstraptest/test_knownbug.rb: add issues.
+
 Tue Dec 18 20:22:44 2007  Tanaka Akira  <akr@fsij.org>
 
 	* parse.y (arg tMATCH arg): call reg_named_capture_assign_gen if regexp
